--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!---Css-externo-->
     <link rel="stylesheet" href="style/style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+
 
 
     <title>bootstrap learn</title>
@@ -128,22 +128,11 @@
 
 <div class="container">
 <div class="row text-center">
-  <div class="col-md">
-  <div class="card-bg-dark text-light">
-  <div class="card-body text-center">
-    <i class="bi bi-laptop"></i>
+  <div class="col-md">1</div>
 
-  </div>
-  </div>
-  </div>
-
-
-      
-    
   
-  
-  <div class="col-md"></div>
-  <div class="col-md"></div>
+  <div class="col-md">1</div>
+  <div class="col-md">1</div>
 </div>
 
 
