--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
    
 
 </nav>
-<!--Showcase-->
+<!--Showcase--> <!--!-->
 
 
 <section class="bg-dark text-light p-5 p-lg-0 pt-lg-3 text-center text-sm-start mb-5">
