--- a/index.html
+++ b/index.html
@@ -458,6 +458,12 @@ Perguntas frenquentes</h2>
     </div>
   </div>
 </div>
+</div>
+
+<div class="alert alert-warning alert-dismissible fade show" role="alert">
+  Utilizamos cookies essenciais e tecnologias semelhantes de acordo com a nossa Política de Privacidade, ao continuar navegando, você concorda com estas condições.
+  <button type="button" class="btn-dark" data-bs-dismiss="alert" aria-label="Close">Ok</button>
+</div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
